# genestboost

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  changelog.rst  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build_tests.yml  run_tests_and_format.yml
docs/: Makefile  conf.py  genestboost.link_functions.rst  genestboost.loss_functions.rst  genestboost.rst  genestboost.weak_learners.rst  index.rst  modules.rst
docs/source/: alternative_fitting_procedure_example.rst  binary_target_with_custom_wrapper_example.rst  boosted_linear_model_example.rst  changelog.rst  conf.py  examples.rst  forward_neural_network_example.rst  genestboost.link_functions.rst  genestboost.loss_functions.rst  genestboost.rst  genestboost.weak_learners.rst  how_it_works.rst  index.rst  installation.rst  introduction.rst  modules.rst  quantile_regression_example.rst  (+3 more)
genestboost/: __init__.py  boosted_linear_model.py  boosted_model.py  forward_stagewise_glm.py  model_data_sets.py  model_ensemble.py  residual_model.py  type_hints.py
notebooks/: BoostedLinearModel Example.ipynb  alternative_fitting_procedure_example.ipynb  binary_target_with_custom_wrapper_example.ipynb  ensemble_different_algorithms_quantile_regression.ipynb  forward_neural_network_example.ipynb  forward_nn_example_with_gpu.ipynb
src/: setup.py
tests/: .coveragerc  boosted_model_test.py  conftest.py  initial_model_class_test.py  model_data_sets_test.py
(+66 files in other folders)
