[tool.poetry]
name = "genestboost"
version = "0.1.0"
description = "A generic package to boost any estimator, not just trees"
authors = ["Ben Cross <btcross26@yahoo.com>"]
readme = "README.rst"
packages = [
    { include = "genestboost", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.15.0"
jupyter = "^1.0.0"
pandas = "^1.0.4"
sklearn = "^0.0"
matplotlib = "^3.2.1"
altair = "^4.1.0"
vega = "^3.4.0"
pylint = "^2.5.3"
isort = "^4.3.21"
mypy = "^0.780"
black = "^19.10b0"
flake8 = "^3.8.3"
sphinx = "^3.1.1"
tox = "^3.15.2"
dephell = "^0.8.3"
pytest-cov = "^2.10.0"
check-manifest = "^0.42"
pre-commit = "^2.5.1"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
